--- a/index.html
+++ b/index.html
@@ -15,16 +15,85 @@
             <div class="banner-content">
                 <h1 class="banner-title">Let's make<br>beautiful flowers a<br>part of your life.</h1>
                 <p class="banner-description">It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout. The point of using Lorem Ipsum is<br>that it has a more-or-less normal distribution of letters</p>
-                <button>Shop Now</button>
+                <button class="btn-primary">Shop Now</button>
             </div>
             <img src="flower-asset/pngwing 10.png" alt="">
         </section>
     </header>
     <main>
-
+        <section class="feature">
+            <div class="feature-content">
+                <h3 class="section-title">Our Featured Flowers</h3>
+                <p class="section-description">It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout</p>
+            </div>
+            <div class="image-section">
+                <figure class="image-info" style="padding: 100px 72px 0; background: url(<path-to-image>), lightgray 50% / cover no-repeat;">
+                    <img src="flower-asset/pngwing 6.png" alt="">
+                    <p style="text-decoration-line: underline;">Pink Flower Tree</p>
+                </figure>
+                <figure class="image-info" style="padding: 140px 40px 24px;">
+                    <img src="flower-asset/pngwing 5.png" alt="">
+                    <p style="text-decoration-line: underline;">Pink Flower Tree</p>
+                </figure>
+                <figure class="image-info" style="padding: 64px 64px 0;">
+                    <img src="flower-asset/pngwing 7.png" alt="">
+                    <p style="text-decoration-line: underline;">Pink Flower Tree</p>
+                </figure>
+            </div>
+        </section>
+        <section class="information">
+            <div>
+                <img src="flower-asset/Group 57.png" alt="">
+                <p>Same Day Delivery. Click & Collect.</p>
+            </div>
+            <div>
+                <img src="flower-asset/Group 58.png" alt="">
+                <p>Fresh Flowers. Local Growers</p>
+            </div>
+            <div>
+                <img src="flower-asset/Group 59.png" alt="">
+                <p>24/7 Free Support.</p>
+            </div>
+        </section>
+        <section class="banner" style="border-radius: 8px;">
+            <div class="banner-content">
+                <h3 class="deal-title">Hot Deal ! Sale Up To 25% Off</h3>
+                <p class="deal-description">It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout</p>
+                <button class="btn-primary">Sign Up</button>
+            </div>
+            <img src="flower-asset/pngwing 8.png" alt="">
+        </section>
+        <section>
+            <div class="picture-info">
+                <h3>Instagram</h3>
+                <p class="section-description">It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout</p>
+            </div>
+            <div class="picture">
+                <img src="flower-asset/Flower 01.png" alt="">
+                <img src="flower-asset/Rectangle 4.png" alt="">
+                <img src="flower-asset/pngwing 5.png" alt="">
+                <img src="flower-asset/pngwing 6.png" alt="">
+            </div>
+        </section>
+        <section class="container">
+            <div class="latest">
+                <h3 class="section-title">Get The Latest Deals</h3>
+                <p class="section-description">$30 coupon for first shopping</p>
+            </div>
+            <div class="input">
+                <input type="text" name="" id="" placeholder="Enter Your Email Here">
+                <button class="btn-primary">Subscribe</button>
+            </div>
+        </section>
     </main>
-    <footer>
-
+    <footer class="footer">
+        <section>
+            <div class="shop-footer">
+                <h3 style="color: aliceblue;"><span style="color: #E55473">Flower</span>Shop</h3>
+                <p style="color: rgba(255, 255, 255, 0.90); font-size: 18px;               line-height: 30px;">It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.</p>
+                <p style="color: aliceblue;">@2020-2023, FlowerShop.com. All rights reserved</p>
+            </div>
+        </section>
     </footer>
 </body>
 </html>
